tests/baselines/reference/destructuringParameterDeclaration4.errors.txt
tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts(15,1): error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
  Type argument candidate 'string' is not a valid type argument because it is not a supertype of candidate 'number'.


==== tests/cases/conformance/es6/destructuring/destructuringParameterDeclaration4.ts (1 errors) ====
    interface F { }
    class C implements F{
    }
    function foo<T>(...a: T[]) { }
    function foo1<T extends String>(...a: T[]) { }
    function bar<T extends C>({x} = { x: new C() }) { }
    function baz<T extends F>({x}: { x: F }) { }
    function baz1<T extends C>({x}: { x: C }) { }
    function baz2<T extends C>({x}: { x: C }) { }
    
    var obj = new C();
    baz1({ x: obj });
    baz({ x: new C() });
    baz({ x: {} });
    foo("hello", 1, 2);
    ~~~
!!! error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
!!! error TS2453:   Type argument candidate 'string' is not a valid type argument because it is not a supertype of candidate 'number'.
    foo<number|string>("hello", 1, 2);
    foo("hello", "world");
    
    